update npm fixed visibility:collapse

--- a/web/src/components/header/header.scss
+++ b/web/src/components/header/header.scss
@@ -1,7 +1,7 @@
 .header {
   position: fixed;
   bottom: calc(var(--s3) * 1em);
-  left: calc(var(--s3) * 1em);
+  left: 0;
 }
 .nav {
   display: block;
