--- a/web/src/components/svgFilter/filter.scss
+++ b/web/src/components/svgFilter/filter.scss
@@ -1,3 +1,6 @@
 .filter {
   visibility: collapse;
+  width: 1px;
+  height: 1px;
+  clip-path: polygon(0 0, 0 0, 0 0, 0 0);
 }
